themes controller and route
